2007-04-24  Diego Escalante Urrelo <diegoe@gnome.org>

	* embed/ephy-embed-dialog.c:
	Fix some strict-aliasing warnings.

2007-04-20  Bastien Nocera  <hadess@hadess.net>

	* data/mime-types-permissions.xml: Add "application/x-quicktimeplayer"
	and "application/x-quicktime-media-link" to the safe mime-types
	(Closes: #431665)

2007-04-16  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-go-action.c:

	Middle clicking the Go button should open the location bar address
	content in a new tab. Bug #362591.

2007-04-09  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Post-release version bump.

2007-04-09  Christian Persch  <chpe@gnome.org>

	=== Release 2.18.1 ===

	* configure.ac:
	* doc/reference/tmpl/ephy-embed.sgml:

2007-04-09  Christian Persch  <chpe@gnome.org>

	* data/glade/print.glade:
	* embed/mozilla/EphyBrowser.cpp:
	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintService.h:

	Fix printing of frames.

2007-03-29  Christian Persch  <chpe@gnome.org>

	* lib/ephy-password-dialog.c: (ephy_password_dialog_constructor):

	#if 0 some currently unused code. Bug #423907.

2007-03-16  Bastien Nocera  <hadess@hadess.net>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
	Fix Epiphany not finding some Gecko plugins when
	running in a multilib environment (Closes: #407419)

2007-03-12  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GtkNSSDialogs.cpp:

	Add translator's comment for 'token'.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* *:

	Correct FSF address. Bug #409075, patch by John Millikin.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Post-release version bump.

2007-03-11  Christian Persch  <chpe@gnome.org>

	=== Release 2.18.0 ===

2007-03-11  Christian Persch  <chpe@gnome.org>

	* configure.ac:

	Set version to 2.18.0.

2007-03-11  Christian Persch  <chpe@gnome.org>

	* embed/Makefile.am:
	* lib/Makefile.am:
	* lib/egg/Makefile.am:
	* src/Makefile.am: