@@ -1,3 +1,10 @@
+2007-05-18  Diego Escalante Urrelo  <diegoe@gnome.org>
+
+	* src/popup-commands.c:
+	* lib/ephy-file-helpers.c:
+	Avoid opening nautilus if downloads are done to Desktop. This re-fixes
+	bug #383698.
+
 2007-04-24  Diego Escalante Urrelo <diegoe@gnome.org>
 
 	* embed/ephy-embed-dialog.c:
